<resources>
    <string name="app_name">EReader</string>
    <string name="mainmencontinue">Continue</string>
    <string name="mainmenlibrary">Library</string>
    <string name="mainmencommunity">Community</string>
    <string name="mainmensettings">Settings</string>
    <string name="welcomemessage">Welcome</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="darkmode">Dark Mode</string>
    <string name="descriptiontitle">Description</string>
    <string name="shop">Shop</string>
    <string name="Library">Library</string>
    <string name="booktitle">BookTitle</string>
    <string name="author">Author</string>
    <string name="pubdate">pubdate</string>

</resources>