<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/book_stack"
    tools:context=".Desc">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="240dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/generic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="227dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="50dp"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/booktitle"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="328dp"
        android:layout_height="216dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="387dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#000000"
        android:padding="10dp"
        android:text="@string/descriptiontitle"
        android:textColor="#FFFFFF"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="downloadConfirmation"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/download" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="272dp"
        android:layout_marginTop="292dp"
        android:layout_marginEnd="97dp"
        android:gravity="center"
        android:text="@string/author"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="57dp"
        android:layout_height="20dp"
        android:layout_marginStart="264dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="90dp"
        android:gravity="center"
        android:text="@string/pubdate"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>